---
source: src/to_execution_plan.rs
description: "Plan {\n    execution_time: None,\n    root: SequentialScan(\n        SequentialScanNode {\n            base: BaseNode {\n                execution_time: None,\n                actual_rows: None,\n                children: [],\n                output: [\n                    Field {\n                        table_name: Some(\n                            \"r\",\n                        ),\n                        field_name: \"b\",\n                    },\n                ],\n            },\n            relation: \"r\",\n            opt_filter: Some(\n                \"a >= 2 and a IS NOT NULL\",\n            ),\n        },\n    ),\n    aliases: {},\n}"
---
ProjectionExec: expr=[b@1 as b]
  FilterExec: a@0 >= 2 AND a@0 IS NOT NULL
    MemoryExec: partitions=1, partition_sizes=[1]
